--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,14 +4,56 @@
     <string name="app_name">GLSElevate</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="your_scout">Your Scout</string>
     <string name="title_activity_gls__act__scout_edit">GLS_Act_ScoutEdit</string>
+    <string name="your_scout">Your Scout</string>
+    <string name="play_ball">Play Ball</string>
+    <string name="statbook">Statbook</string>
+    <string name="upload_game">upload game stats</string>
+    <string name="name">Name</string>
+    <string name="hometown">Hometown</string>
+    <string name="position">Position</string>
+    <string name="game_style">Game Style</string>
+    <string name="height">Height</string>
+    <string name="weight">Weight</string>
+    <string name="wingspan">Wingspan</string>
+    <string name="vertical_leap">Vertical Leap</string>
+    <string name="shoesize">Shoe Size</string>
+
     <string-array name="positions_array">
         <item>Guard</item>
         <item>Point Guard</item>
         <item>Shooting Guard</item>
         <item>Off Guard</item>
         <item>Combo Guard</item>
+        <item>Forward</item>
+        <item>Small Forward</item>
+        <item>Power Forward</item>
+        <item>Point Forward</item>
+        <item>Center</item>
     </string-array>
+    <string-array name="playball_list">
+        <item>upload game stats</item>
+    </string-array>
+
+    <string name="points">Points</string>
+    <string name="rebounds">Rebounds</string>
+    <string name="assists">Assists</string>
+    <string name="steals">Steals</string>
+    <string name="blocks">Blocks</string>
+    <string name="turnovers">Turnovers</string>
+    <string name="fouls">Fouls</string>
+    <string name="minutes">Minutes</string>
+    <string name="fgs">FGs</string>
+    <string name="fg3s">3FGs</string>
+    <string name="fts">FTs</string>
+    <string name="pointers_2">2-Pointers</string>
+    <string name="pointers_3">3-Pointers</string>
+    <string name="free_throws">Free Throws</string>
+    <string name="made">Made</string>
+    <string name="missed">Missed</string>
+    <string name="save">Save</string>
+    <string name="load">Load</string>
+    <string name="title_activity_gls__act__play_ball__list">PlayBall_List</string>
+    <string name="title_activity_gls__act__play_ball__game_stats_edit">GameStatsEdit</string>
 
 </resources>
