--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">GLSElevate</string>
+    <string name="brand_name">Game.Life.Stats.</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_gls__act__scout_edit">GLS_Act_ScoutEdit</string>
@@ -92,5 +93,7 @@
     <string name="empty"></string>
     <string name="title_activity_scout">Scout</string>
     <string name="edit">Edit</string>
+    <string name="done">Done</string>
+    <string name="about">About</string>
 
 </resources>
