--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="prev">prev</string>
     <string name="next">next</string>
     <string name="last">last</string>
+    <string name="by_gls">by: GameLifeStats.com</string>
     
     <string name="app_name">GLSElevate</string>
     <string name="brand_name">Elevate Your Game</string>
