--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="career">Career</string>
+    <string name="rundown">RUndown</string>
+    <string name="averages_n_totals">Averages &amp; Totals</string>
+    <string name="totals_sign">&#8721;</string>
+    <string name="shooting_made_n_percentage">Shooting</string>
+    <string name="game_stats_low">game stats</string>
+    
+    <string name="two_s">2\'s</string>
+    <string name="three_s">3\'s</string>
+    <string name="attempts">Attempts</string>
+    <string name="percent_sign">%</string>
+    
     <string name="win">Win</string>
     <string name="loss">Loss</string>
     <string name="tips">Tips</string>
@@ -76,7 +88,8 @@
     <string name="games">Games</string>
     <string name="points">Points</string>
     <string name="rebounds">Rebounds</string>
-    <string name="orebounds">Off. Rebounds</string>
+    <string name="orebounds">Off. Rebs</string>
+    <string name="drebounds">Def. Rebs</string>
     <string name="assists">Assists</string>
     <string name="steals">Steals</string>
     <string name="blocks">Blocks</string>
