--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="plus1">+1</string>
+    <string name="minus1">-1</string>
+    
+    <string name="twos_made">2\'s made</string>
+    <string name="twos_missed">2\'s miss</string>
+    <string name="threes_made">3\'s made</string>
+    <string name="threes_missed">3\'s miss</string>
+    <string name="ft_made">ft made</string>
+    <string name="ft_miss">ft miss</string>
+    <string name="reboff">reb off</string>
+    <string name="rebdef">reb def</string>
+    
     <string name="archived_games_with_colon">Archived:</string>
     <string name="games_played_with_colon">Games Played:</string>
     <string name="active_games_with_colon">Active:</string>
@@ -80,7 +92,7 @@
     <string name="ast">AST</string>
     <string name="stl">STL</string>
     <string name="blk">BLK</string>
-    <string name="tos">TOs</string>
+    <string name="tos">TURN</string>
     <string name="min">MIN</string>
     <string name="fgma">FG(m-a)</string>
     <string name="fgp">FG%</string>
