black look is complete

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="rebounding">rebounding</string>
     <string name="finishing">finishing</string>
     <string name="court_vision">court vision</string>
-    <string name="mid_range">mid_range</string>
+    <string name="mid_range">mid range</string>
     <string name="long_range">long range</string>
     <string name="dunk_layup">dunks / layups</string>
     <string name="passing">passing</string>
